# PDFLib2

./: PDFLib2.py  README.md  pyproject.toml
